# 3cxgui

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
src/3cxgui/: 3cxgui.py
src/cxgui/: __init__.py  cxgui.py
