[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
  {name = "David M", email = "david.mcken@codepro.guru"},
]
dependencies = [
  "dotenv",
  "fake-useragent",
  "requests",
]
description = "Magical description"
dynamic = ["version"]
name = "cxgui"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.hatch.version]
path = "src/cxgui/__init__.py"
