[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
  {name = "David M", email = "david.mcken@codepro.guru"},
]
dependencies = [
  "dotenv",
  "fake-useragent",
  "requests",
]
description = "3CX Web GUI Automation"
dynamic = ["version"]
name = "cxgui"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/dmcken/3cxgui"
Documentation = "https://github.com/dmcken/3cxgui"
Repository = "https://github.com/dmcken/3cxgui.git"
Issues = "https://github.com/dmcken/3cxgui/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.hatch.version]
path = "src/cxgui/__init__.py"
